--- a/incident.html
+++ b/incident.html
@@ -113,6 +113,11 @@ document.addEventListener("DOMContentLoaded", () => {
      <input id="Otherincident">
  </div>
 
+  <label>Name of Witness (if applicable)</label>
+  <input id="nameofwitness" required>
+
+   <label>Contact Number</label>
+  <input type="witnessnumber" id="Contactno">
   
 ______________________________________________________________________________________________________________________________
   
