--- a/incident.html
+++ b/incident.html
@@ -35,7 +35,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <h2>Incident Report</h2>
 <hr>
 
-<form id="incident">
+<form id="incidentform">
 
 <!-- REPORTER -->
 <div class="section">
