--- a/incident.html
+++ b/incident.html
@@ -164,7 +164,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <label>Attachment 1</label><input type="file" input id="attach1" accept="image/*,application/pdf">
     <label>Attachment 2</label><input type="file" input id="attach2" accept="image/*,application/pdf">
     <label>Attachment 3</label><input type="file" input id="attach3" accept="image/*,application/pdf">
-    <label>Attachment 4</label><input type="file" input id="attach4" accept="image/*,application/pdf">\
+    <label>Attachment 4</label><input type="file" input id="attach4" accept="image/*,application/pdf">
     </div>
 
   <div class="section">
