--- a/incident.html
+++ b/incident.html
@@ -165,7 +165,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <button type="button" class="secondary" onclick="clearSupSignature()">Clear Signature</button>
     </div>
 
-<button type="submit" id="submitBtn" disabled>Submit</button>
+<button type="submit" id="submitBtn">Submit</button>
 <div id="status"></div>
 
 <button type="button" onclick="location.href='menu.html'">
