--- a/incident.html
+++ b/incident.html
@@ -164,6 +164,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <label>Attachment Type</label>
    <div class="radio-row">
     <label><input type="checkbox" id="attachmentType" name="attachmentType" value="descriptioncontinuation">DESCRIPTION CONTINUATION</label>
+     </div>
     <label><input type="checkbox" id="attachmentType" name="attachmentType" value="photo">PICTURES/ PHOTOGRAPHS</label>
     <label><input type="checkbox" id="attachmentType" name="attachmentType" value="statment">WITNESS STATEMENT</label>
     <label><input type="checkbox" id="attachmentType" name="attachmentType" value="others">OTHERS</label>
