--- a/incident.html
+++ b/incident.html
@@ -19,6 +19,18 @@
 </head>
 
 <body>
+  
+<script>
+/* 🔒 Block direct access without login */
+(function () {
+  if (localStorage.getItem("LOGGED_IN") !== "YES") {
+    window.location.replace("index.html");
+  }
+})();
+</script>
+
+<div class="form-container">
+  <!-- rest of your incident page -->
   <script>
 document.addEventListener("DOMContentLoaded", () => {
   const loginState = localStorage.getItem("LOGGED_IN");
