--- a/incident.html
+++ b/incident.html
@@ -19,6 +19,12 @@
 </head>
 
 <body>
+  <script>
+/* 🔒 Block direct access without login */
+if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
+  window.location.replace("index.html");
+}
+</script>
   
 <script>
 /* Always force login page */
