--- a/menu.html
+++ b/menu.html
@@ -30,6 +30,8 @@
 })();
 </script>
 
+  <div class="form-container">
+  <img src="Logo.png" alt="Company Logo" class="logo">
 
   <div class="form-container">
     <h2>Select Form</h2>
