--- a/fire.html
+++ b/fire.html
@@ -71,6 +71,27 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
       <label for="time">Panel Reset Time</label>
       <input type="time" id="paneltime" name="paneltime">
+
+      <label>Alarm Activated In</label><br>
+      <div class="check-row">
+      <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Kitchen">
+      <span>Kitchen</span></label>
+      </div>
+    
+     <div class="check-row">
+     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="LIving Room">
+     <span>LIving Room</span></label>
+     </div>
+    
+     <div class="check-row">
+     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Hall">
+     <span>Hall</span></label>
+     </div>
+
+     <div class="check-row">
+     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Bed Room">
+     <span>Bed Room</span></label>
+     </div>
 ____________________________________________________________________________________________________________________________________
 <div class="section">
   <h3>Accommodation Name</h3>
