--- a/fire.html
+++ b/fire.html
@@ -59,8 +59,8 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
       <div class="radio-row">
        <label>Evacuated: </label> 
-       <label class="radio-box">YES <input type="radio" name="guardPosition" value="YES"></label>
-       <label class="radio-box">NO <input type="radio" name="guardPosition" value="NO"></label>
+       <label class="radio-box">Yes <input type="radio" name="guardPosition" value="Yes"></label>
+       <label class="radio-box">No <input type="radio" name="guardPosition" value="No"></label>
        </div>
 
       <label>Date of Incident</label>
