--- a/fire.html
+++ b/fire.html
@@ -58,7 +58,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        </div>
 
       <div class="yesno">
-       <label style="font-weight: bold;">Evacuated: &nbsp&nbsp</label> 
+       <label style="font-weight: bold;">Evacuated: &nbsp&nbsp&nbsp&nbsp</label> 
        <label class="radio-box">Yes <input type="radio" name="guardPosition" value="Yes"></label>
        <label class="radio-box">No <input type="radio" name="guardPosition" value="No"></label>
        </div>
@@ -182,7 +182,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
      <div class="section">
      <h3>Incident Details</h3>
      <div class="yesno">
-       <label style="font-weight: bold;">Exhaust Fan Was : &nbsp&nbsp</label> 
+       <label style="font-weight: bold;">Exhaust Fan Was : &nbsp&nbsp&nbsp&nbsp</label> 
        <label class="radio-box">Off<input type="radio" name="ExhaustFan" value="Off"></label>
        <label class="radio-box">On<input type="radio" name="ExhaustFan" value="On"></label>
        </div>
@@ -194,15 +194,15 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        </div>
 
        <div class="yesno">
-       <label style="font-weight: bold;">Kitchen Door Was : &nbsp&nbsp</label>    
+       <label style="font-weight: bold;">Kitchen Door Was : &nbsp&nbsp&nbsp&nbsp</label>    
        <label class="radio-box">Open<input type="radio" name="KitchenDoor" value="Open"></label>
        <label class="radio-box">Closed<input type="radio" name="KitchenDoor" value="Closed"></label>
        <label class="radio-box">N/A<input type="radio" name="KitchenDoor" value="N/A"></label>
        </div>
      </div>
 
-<!--     <div class="section">
-     <h3>Incident Details</h3>
+       <div class="section">
+       <h3>Incident Details</h3>
 
         <label style="font-weight: bold;">Fire Blanket Used</label>    
        <label class="radio-box">Yes<input type="radio" name="FireBlanket" value="Yes"></label>
@@ -240,7 +240,6 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
      <span>CO2</span></label>
      </div>
      </div>
-    -->
 ____________________________________________________________________________________________________________________________________
 <div class="section">
   <h3>Accommodation Name</h3>
