--- a/fire.html
+++ b/fire.html
@@ -199,16 +199,14 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        <label class="radio-box">Closed<input type="radio" name="KitchenDoor" value="Closed"></label>
        <label class="radio-box">N/A<input type="radio" name="KitchenDoor" value="N/A"></label>
        </div>
-     </div>
 
-   <!--    <div class="section">
-       <h3>Incident Details</h3>
-
+       <div class="yesno">
         <label style="font-weight: bold;">Fire Blanket Used</label>    
        <label class="radio-box">Yes<input type="radio" name="FireBlanket" value="Yes"></label>
        <label class="radio-box">No<input type="radio" name="FireBlanket" value="No"></label>
        </div>
 
+       <div class="yesno">
         <label style="font-weight: bold;">Fire Extinguisher Used</label>    
         <label class="radio-box">Yes<input type="radio" name="FireExtinguisher" value="Yes"></label>
        <label class="radio-box">No<input type="radio" name="FireExtinguisher" value="No"></label>
@@ -239,7 +237,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
      <label><input type="checkbox" id="TypeFireExtinguisher" name="TypeFireExtinguisher" value="CO2">
      <span>CO2</span></label>
      </div>
-  -->
+  
    
 ____________________________________________________________________________________________________________________________________
 <div class="section">
