--- a/fire.html
+++ b/fire.html
@@ -212,6 +212,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        <label class="radio-box">No<input type="radio" name="FireExtinguisher" value="No"></label>
        </div>
 
+       <div class="section">
        <label>Type of Fire Extinguisher</label><br>
       <div class="check-row">
       <label><input type="checkbox" id="TypeFireExtinguisher" name="TypeFireExtinguisher" value="Form">
@@ -237,6 +238,8 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
      <label><input type="checkbox" id="TypeFireExtinguisher" name="TypeFireExtinguisher" value="CO2">
      <span>CO2</span></label>
      </div>
+     </div>
+       
   
    
 ____________________________________________________________________________________________________________________________________
