--- a/fire.html
+++ b/fire.html
@@ -58,7 +58,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        </div>
 
       <div class="yesno">
-       <label style="font-weight: bold;">Evacuated : &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label> 
+       <label style="font-weight: bold;">Evacuated : &nbsp&nbsp&nbsp</label> 
        <label class="radio-box">Yes <input type="radio" name="guardPosition" value="Yes"></label>
        <label class="radio-box">No <input type="radio" name="guardPosition" value="No"></label>
        </div>
@@ -207,7 +207,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        </div>
 
        <div class="yesno">
-        <label style="font-weight: bold;">Fire Extinguisher Used : &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>    
+        <label style="font-weight: bold;">Fire Extinguisher Used :</label>    
         <label class="radio-box">Yes<input type="radio" name="FireExtinguisher" value="Yes"></label>
        <label class="radio-box">No<input type="radio" name="FireExtinguisher" value="No"></label>
        </div>
