--- a/fire.html
+++ b/fire.html
@@ -51,13 +51,13 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
   </select>
 
 
-       <div class="yesno">
+       <div class="radio-row">
        <label style="font-weight: bold;">Type of Incident :</label> 
        <label class="radio-box">Fire Alarm <input type="radio" name="TypeofInciden" value="Fire Alarm"></label>
        <label class="radio-box">Fire Incident <input type="radio" name="TypeofInciden" value="Fire Incident"></label>
        </div>
 
-      <div class="yesno">
+      <div class="radio-row">
        <label style="font-weight: bold;">Evacuated : &nbsp&nbsp&nbsp</label> 
        <label class="radio-box">Yes <input type="radio" name="guardPosition" value="Yes"></label>
        <label class="radio-box">No <input type="radio" name="guardPosition" value="No"></label>
