--- a/menu.html
+++ b/menu.html
@@ -41,6 +41,7 @@
     <button onclick="location.href='aqcl.html'">Accomodation Quality Check</button>
     <button onclick="location.href='incident.html'">Incident Report</button>
     <button onclick="location.href='fire.html'">Fire Alarm Report</button>
+    <button onclick="location.href='test.html'">Test Page</button>
 
     <div class="spacer"></div>
 
