--- a/aqcl.html
+++ b/aqcl.html
@@ -119,13 +119,13 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
  
   <div class="yesno">
-    <label>is the Patrol Effective?</label> <label class="radio-box">Yes <input type="radio" name="patrolEffective" value="YES" required></label>
+    <label>Is the Patrol Effective?</label> <label class="radio-box">Yes <input type="radio" name="patrolEffective" value="YES" required></label>
     <label class="radio-box">No <input type="radio" name="patrolEffective" value="NO"></label>
   </div>
 
 
 
-  <label>what changes have you made?</label>
+  <label>What changes have you made?</label>
   <textarea id="changesMade" required></textarea>
 
 
@@ -138,7 +138,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 <div class="section">
   <h3>Check Supervisor Visitation Recored</h3>
-  <label>when did guard supervisor Last Visit?</label>
+  <label>When did guard supervisor Last Visit?</label>
   <input type="date" id="supervisorLastVisit" required>
 
 
