--- a/fire.html
+++ b/fire.html
@@ -7,7 +7,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accommodation Quality Check List</title>
+  <title>Security Fire Fire Alarm</title>
 
   <!-- Font -->
 
