--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@ loginBtn.addEventListener("click", login);
 function login() {
   const username = user.value.trim();
   const password = pass.value;
+ 
 
-  if (!username || !password) {
+   if (!username || !password) {
     msg.innerText = "⚠️ Enter username and password";
     msg.className = "message error";
     return;
@@ -60,32 +61,28 @@ function login() {
     method: "POST",
     body: JSON.stringify({
       action: "login",
-      username: username,
-      password: password   // plain password → hashed in Apps Script
+      username,
+      password
     })
   })
   .then(r => r.json())
-  .then(res => {
-  if (res.status === "success") {
-  sessionStorage.setItem("LOGGED_IN", "YES");
-  sessionStorage.setItem("USERNAME", user.value);;
+    .then(res => {
+      if (res.status === "success") {
+        sessionStorage.setItem("LOGGED_IN", "YES");
 
-  // 🔒 ensure storage is written before redirect
-  setTimeout(() => {
-    window.location.replace("menu.html");
-  }, 100);
-}
+        // optional (not sensitive)
+        sessionStorage.setItem("USERNAME", username);
 
-  
-  else {
-      msg.innerText = "❌ Wrong username or password";
+        window.location.replace("menu.html");
+      } else {
+        msg.innerText = "❌ Wrong username or password";
+        msg.className = "message error";
+      }
+    })
+    .catch(() => {
+      msg.innerText = "⚠️ Server error";
       msg.className = "message error";
-    }
-  })
-  .catch(() => {
-    msg.innerText = "⚠️ Server error";
-    msg.className = "message error";
-  });
+    });
 }
 </script>
 
