--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ async function login() {
     return;
   }
 
-  const res = await fetch(APP_SCRIPT_URL, {
+  const res = await fetch(SCRIPT_URL, {
     method: "POST",
     body: JSON.stringify({
       action: "login",
