--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ loginBtn.addEventListener("click", login);
 
 
 async function login() {
-  const username = document.getElementById("username").value.trim();
-  const password = document.getElementById("password").value.trim();
+ const username = document.getElementById("user").value.trim();
+const password = document.getElementById("pass").value.trim();
 
   if (!username || !password) {
     alert("Enter username and password");
