--- a/incident.html
+++ b/incident.html
@@ -201,7 +201,9 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
   
     <label>Prepared and Reported by</label>
-  <input id="reportedBy" name="reportedBy">
+  <input id="reportedBy" name="reportedBy" type="text"  required readonly>
+
+
 
  <!-- SIGNATURE -->
 
