--- a/fire.html
+++ b/fire.html
@@ -109,43 +109,46 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
       </div>
     
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="LIving Room">
+     <label><input type="checkbox"  name="AlarmActivated" value="LIving Room">
      <span>LIving Room</span></label>
      </div>
     
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Hall">
+     <label><input type="checkbox"  name="AlarmActivated" value="Hall">
      <span>Hall</span></label>
      </div>
 
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Bed Room">
+     <label><input type="checkbox"  name="AlarmActivated" value="Bed Room">
      <span>Bed Room</span></label>
      </div>
 
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Electrical Room">
+     <label><input type="checkbox"  name="AlarmActivated" value="Electrical Room">
      <span>Electrical Room</span></label>
      </div>
 
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Garbage Room">
+     <label><input type="checkbox"  name="AlarmActivated" value="Garbage Room">
      <span>Garbage Room</span></label>
      </div>
 
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Corridor">
+     <label><input type="checkbox"  name="AlarmActivated" value="Corridor">
      <span>Corridor</span></label>
      </div>
 
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Basement">
+     <label><input type="checkbox"  name="AlarmActivated" value="Basement">
      <span>Basement</span></label>
      </div>
 
      <div class="check-row">
-     <label><input type="checkbox" id="AlarmActivated" name="AlarmActivated" value="Other Area">
+     <label><input type="checkbox"  name="AlarmActivated" value="Other Area">
      <span>Other Area</span></label>
+       <p id="alarmError" style="color:red; display:none;">
+  ⚠️ Please select at least one area
+       </p>
      </div>
 
     <label>Other Area</label>
