--- a/fire.html
+++ b/fire.html
@@ -104,7 +104,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
       <label>Alarm Activated In</label><br>
       <div class="check-row">
-      <label><input type="checkbox" required  id="AlarmActivated" name="AlarmActivated" value="Kitchen">
+      <label><input type="checkbox" name="AlarmActivated" value="Kitchen">
       <span>Kitchen</span></label>
       </div>
     
