--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="form-container">
   <img src="Logo.png" alt="Company Logo" class="logo">
-  <h1 style="text-align:center; color:#701a1a; font-weight:700; font-size:24px;">NSS PATROLLING3</h1>
+  <h1 style="font-family: Arial, sans-serif; font-weight:700; font-size:20px; text-align:center; color:#701a1a;">NSS PATROLLING</h1>
 
   <h2 style="text-align:center;">Supervisor Login</h2>
 
