--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <div class="form-container">
   <img src="Logo.png" alt="Company Logo" class="logo">
-  <h1 style="font-family: Arial, sans-serif; font-weight:700; font-size:24px; text-align:center; color:#701a1a;">NSS PATROLLING1</h1>
+  <h1 style="font-family: Arial, sans-serif; font-weight:700; font-size:25px; text-align:center; color:#701a1a;">NSS PATROLLING</h1>
 
-  <h2 style="text-align:center;">Supervisor Login</h2>
+  <h2 style="text-align:center; font-size:18px">Supervisor Login</h2>
 
   <input id="user" type="text" placeholder="Username" autocomplete="username">
   <input id="pass" type="password" placeholder="Password" autocomplete="current-password">
