--- a/incident.html
+++ b/incident.html
@@ -190,6 +190,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
     <div class="section">
      <h3>Upload Files</h3> <br>
     <label>Attachment 1</label><input type="file" input id="attach1" name="attach1" multiple accept="image/*">
+      <small id="attach1Error" style="color:red;"></small>
     <label>Attachment 2</label><input type="file" input id="attach2" name="attach2" accept="image/*,application/pdf">
     <label>Attachment 3</label><input type="file" input id="attach3" name="attach3" accept="image/*,application/pdf">
     <label>Attachment 4</label><input type="file" input id="attach4" name="attach4" accept="image/*,application/pdf">
