--- a/incident.html
+++ b/incident.html
@@ -200,6 +200,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
     </label>
   </div>
       <small id="attach1Error" style="color:red;"></small>
+      <div id="thumbPreview" class="thumb-container"></div>
    <div class="upload-card">
     <div class="upload-left">
       📄 Upload File 1
