--- a/aqcl.html
+++ b/aqcl.html
@@ -95,11 +95,11 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>Appearance of guard on duty (comment)</label>
-  <textarea id="guardAppearance" required></textarea>
+  <input type="text" id="guardAppearance" required>
 
 
   <label>Appearance of guard desk / work area (comment)</label>
-  <textarea id="deskAppearance" required></textarea>
+  <input type="text" id="deskAppearance" required>
 
 
 
@@ -126,7 +126,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>What changes have you made?</label>
-  <textarea id="changesMade" required></textarea>
+  <input type="text" id="changesMade" required>
 
 
   <label>Is security guard visually checking 10% of QR ID Cards for personal entering commercial premises </label>
@@ -170,7 +170,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>List keys audited</label>
-  <textarea id="keysAudited" required></textarea>
+  <input type="text" id="keysAudited" required>
 </div>
 
 <div class="section">
