--- a/fire.html
+++ b/fire.html
@@ -297,7 +297,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
          
 
          <label>Cause of the incident</label>
-         <select id="Cause" required style="width:100%">
+         <select id="Cause" name="Cause" required style="width:100%">
          <<option value="">-- Select Cause of the incident --</option> 
          <option value="It was due to Cooking Smoke ">It was due to Cooking Smoke </option>
 <option value="It was due to Unattended Cooking ">It was due to Unattended Cooking </option>
